results/SVCOMP/houdini/log-startswith-2024_03_19_02_33_58.txt
public class startswith {
  //@ non_null
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures request == null ==> \result;
  //@ ensures request == null ==> !\result;
  //@ ensures request != null ==> \result;
  //@ ensures request != null ==> !\result;
  public boolean doPost(String request){
    String param = request;

    String[] argsEnv = {param};

    if (param.equals("") && argsEnv[0].equals("GOTCHA")) {
      return false;
    }
    return true;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    startswith s = new startswith();
    s.doPost("");
    s.doPost("123");
    s.doPost("aesgr");
    s.doPost("GOTCHA");
    s.doPost("#$#%afg");
    s.doPost("14ghj%a");
  }
}


/home/max/Documents/JMLGPT/tmp/startswith.java:2: error: No modifiers are allowed prior to a lightweight specification case
  //@ non_null
      ^
1 error

public class startswith {
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures request == null ==> \result;
  //@ ensures request == null ==> !\result;
  //@ ensures request != null ==> \result;
  //@ ensures request != null ==> !\result;
  public boolean doPost(String request){
    String param = request;

    String[] argsEnv = {param};

    if (param.equals("") && argsEnv[0].equals("GOTCHA")) {
      return false;
    }
    return true;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    startswith s = new startswith();
    s.doPost("");
    s.doPost("123");
    s.doPost("aesgr");
    s.doPost("GOTCHA");
    s.doPost("#$#%afg");
    s.doPost("14ghj%a");
  }
}


/home/max/Documents/JMLGPT/tmp/startswith.java:16: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/startswith.java:3:) in method doPost
    return true;
    ^
/home/max/Documents/JMLGPT/tmp/startswith.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/startswith.java:16:
  //@ ensures !\result;
      ^
2 verification failures

public class startswith {
  //@ ensures \result;
  //@ ensures request == null ==> \result;
  //@ ensures request == null ==> !\result;
  //@ ensures request != null ==> \result;
  //@ ensures request != null ==> !\result;
  public boolean doPost(String request){
    String param = request;

    String[] argsEnv = {param};

    if (param.equals("") && argsEnv[0].equals("GOTCHA")) {
      return false;
    }
    return true;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    startswith s = new startswith();
    s.doPost("");
    s.doPost("123");
    s.doPost("aesgr");
    s.doPost("GOTCHA");
    s.doPost("#$#%afg");
    s.doPost("14ghj%a");
  }
}


/home/max/Documents/JMLGPT/tmp/startswith.java:15: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/startswith.java:6:) in method doPost
    return true;
    ^
/home/max/Documents/JMLGPT/tmp/startswith.java:6: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/startswith.java:15:
  //@ ensures request != null ==> !\result;
      ^
2 verification failures

public class startswith {
  //@ ensures \result;
  //@ ensures request == null ==> \result;
  //@ ensures request == null ==> !\result;
  //@ ensures request != null ==> \result;
  public boolean doPost(String request){
    String param = request;

    String[] argsEnv = {param};

    if (param.equals("") && argsEnv[0].equals("GOTCHA")) {
      return false;
    }
    return true;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    startswith s = new startswith();
    s.doPost("");
    s.doPost("123");
    s.doPost("aesgr");
    s.doPost("GOTCHA");
    s.doPost("#$#%afg");
    s.doPost("14ghj%a");
  }
}



